compiler/src/test/resources/amyc/parser/failing/ArgsError1.amy
module Args
  foo(bar, )
end Args
